--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
-<div>Hello</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<header>Bradley Rivers's Digital Resume
+</header>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>This is the Title</title>
+</head>
+
+<body>
+   My name is Benajamin Bradley Rivers. 
+I'm from Dixon, MS, but most recognize the nearest towns, Philadelphia and Union. 
+I'm twenty six in November and the reason that I'm a little older in school is because I went to a junior college and learned a trade first. 
+I did this so I could save to afford a universtiy. 
+My wife and I got married right after high shcool and have been together for almost a decade.
+We own our own house but currently live in a VERY SMALL camper in Starkville becuase the rent is much less compared to apartments.
+ 
 Benjamin Rivers's Digital Resume
 My name is Benjamin Bradley Rivers and I have 2 AAS and in progress of completing Bachelor's of Engineering
 Job skills include:
 Proficient in hardware troubleshooting
 Proficient in copper cable termination and assembly
 Experience with network configuration
+<img src="https://www.w3schools.com/html/pic_trulli.jpg" alt="Italian Trulli">
+</body>
+</html>
